# obj2cut

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  TODO.md  build.sh  obj2cut.cc  test.sh
